# tree-sitter-ruby

./: .gitignore  AGENTS.md  Cargo.toml  Package.swift  README.ja.md  README.md  biome.jsonc  grammar.js  package.json  pnpm-lock.yaml  setup.py  tree-sitter.json
.github/workflows/: ci.yml  publish.yml  release.yml
bindings/node/: binding_test.js  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_ruby/: __init__.py
bindings/swift/TreeSitterRubyTests/: TreeSitterRubyTests.swift
queries/: tags.scm
scripts/: corpus_test.py
src/: grammar.json  node-types.json  scanner.c
test/corpus/: expressions.txt  literals.txt
test/fixtures/: real_world_patterns.rb
test/highlight/: builtins.rb  keywords.rb  operators.rb
test/tags/: constants.rb  definitions_and_calls.rb  modules_and_docs.rb
