[package]
name = "tree-sitter-ruby"
description = "Ruby grammar for tree-sitter"
version = "26.3.100"
authors = [
  "Max Brunsfeld <maxbrunsfeld@gmail.com>",
  "Amaan Qureshi <amaanq12@gmail.com>",
]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "ruby"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/owayo/tree-sitter-ruby"
edition = "2021"
autoexamples = false
publish = false

build = "bindings/rust/build.rs"

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1.7"

[build-dependencies]
cc = "1.2.56"

[dev-dependencies]
tree-sitter = "0.26.6"
